fix overflow in sidebar. When and image is displayed the working-set-header and project-dropdown-toggle bleed into the image holder, when the sidebar is narrow. This change fixes that.

--- a/src/extensions/default/RecentProjects/styles/styles.css
+++ b/src/extensions/default/RecentProjects/styles/styles.css
@@ -30,9 +30,10 @@
     display: inline-block;
     /* adjust margins to keep position #project-title position stable after extension is loaded */
     margin: -3px 0px -2px -6px;
-    overflow: hidden;
     padding: 0 5px;
     white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;       
 }
 
 #project-title {
