--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -449,6 +449,9 @@ a, img {
     background: #3C3F41;
     color: @project-panel-text-2;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;    
 }
 
 #sidebar {
